# GameSupporter

./: Cargo.toml  README.md  main.py
src/: main.py  main.rs
src/capture/: capture.rs  card.py  card.rs  mod.rs  screen.py  screen.rs
src/domain/: body_parts.py  geometry.py  player.py
src/mouse/: kmbox.rs  mod.rs  mouse.rs
src/vision/: detector.py
